{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 1457,
  "lineage": "2429be5b-dc98-6f96-9b5e-1dbb27f77f35",
  "resources": [
    {
      "module": "module.ec2-private1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:026366927179:instance/i-0608d8860a76b51b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0608d8860a76b51b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aug-30",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d7890059c98eb0f",
            "private_dns": "ip-172-16-30-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.30.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0232cf96a94fb8814",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0fbd688e0564f4d",
            "tags": {
              "Name": "jenkins-dev-01",
              "environment": "dev",
              "server_role": "web"
            },
            "tags_all": {
              "Name": "jenkins-dev-01",
              "environment": "dev",
              "server_role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a753b6ee85b1e8a0",
              "sg-0ff66c64c1d17c417"
            ]
          },
          "dependencies": [
            "module.ec2key.aws_key_pair.ec2key",
            "module.ec2key.tls_private_key.pk",
            "module.ssh_sg.aws_security_group.ssh_sg",
            "module.vpc_subnets.aws_subnet.private",
            "module.vpc_subnets.aws_vpc.vpc",
            "module.web_sg.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-private2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:026366927179:instance/i-095c4600d1e491d10",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095c4600d1e491d10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aug-30",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e8a3a73b243d046",
            "private_dns": "ip-172-16-30-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.30.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a36768c30bc8e9a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0fbd688e0564f4d",
            "tags": {
              "Name": "app-server-dev-01",
              "environment": "dev",
              "server_role": "web"
            },
            "tags_all": {
              "Name": "app-server-dev-01",
              "environment": "dev",
              "server_role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a753b6ee85b1e8a0",
              "sg-0ff66c64c1d17c417"
            ]
          },
          "dependencies": [
            "module.ec2key.aws_key_pair.ec2key",
            "module.ec2key.tls_private_key.pk",
            "module.ssh_sg.aws_security_group.ssh_sg",
            "module.vpc_subnets.aws_subnet.private",
            "module.vpc_subnets.aws_vpc.vpc",
            "module.web_sg.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-public1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:026366927179:instance/i-071fa9512846362e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071fa9512846362e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aug-30",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b03ea6374598cde8",
            "private_dns": "ip-172-16-10-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.193",
            "public_dns": "ec2-44-197-172-53.compute-1.amazonaws.com",
            "public_ip": "44.197.172.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2c3f546fd4dec4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070f09cfd2be4b294",
            "tags": {
              "Name": "bastion-dev-01",
              "environment": "dev",
              "server_role": "web"
            },
            "tags_all": {
              "Name": "bastion-dev-01",
              "environment": "dev",
              "server_role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a753b6ee85b1e8a0",
              "sg-0ff66c64c1d17c417"
            ]
          },
          "dependencies": [
            "module.ec2key.aws_key_pair.ec2key",
            "module.ec2key.tls_private_key.pk",
            "module.ssh_sg.aws_security_group.ssh_sg",
            "module.vpc_subnets.aws_subnet.public",
            "module.vpc_subnets.aws_vpc.vpc",
            "module.web_sg.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026366927179:loadbalancer/upgrad-project-dev-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "upgrad-project-dev-elb-1809521749.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "upgrad-project-dev-elb",
            "idle_timeout": 400,
            "instances": [
              "i-071fa9512846362e8"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "upgrad-project-dev-elb",
            "security_groups": [
              "sg-001a72290e5f0e75c"
            ],
            "source_security_group": "026366927179/upgrad-project-dev-priv",
            "source_security_group_id": "sg-001a72290e5f0e75c",
            "subnets": [
              "subnet-070f09cfd2be4b294",
              "subnet-0ed9e5b8dbe401609"
            ],
            "tags": {
              "Name": "upgrad-project-dev-elb",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-elb",
              "environment": "dev"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2-public1.aws_instance.ec2",
            "module.ec2key.aws_key_pair.ec2key",
            "module.ec2key.tls_private_key.pk",
            "module.priv_sg.aws_security_group.elb_sg",
            "module.ssh_sg.aws_security_group.ssh_sg",
            "module.vpc_subnets.aws_subnet.public",
            "module.vpc_subnets.aws_vpc.vpc",
            "module.web_sg.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.priv_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:security-group/sg-001a72290e5f0e75c",
            "description": "Security Group upgrad-project-dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001a72290e5f0e75c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "upgrad-project-dev-priv",
            "name_prefix": "",
            "owner_id": "026366927179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upgrad-project-dev-elb",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-elb",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:security-group/sg-0a753b6ee85b1e8a0",
            "description": "Security Group upgrad-project-dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a753b6ee85b1e8a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "upgrad-project-dev-ssh",
            "name_prefix": "",
            "owner_id": "026366927179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upgrad-project-dev-ssh",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-ssh",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e9e8301f51176fe",
            "domain": "vpc",
            "id": "eipalloc-03e9e8301f51176fe",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-204-227-195.compute-1.amazonaws.com",
            "public_ip": "34.204.227.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc_subnets.aws_internet_gateway.igw",
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:internet-gateway/igw-0405673857bb97f79",
            "id": "igw-0405673857bb97f79",
            "owner_id": "026366927179",
            "tags": {
              "Name": "upgrad-project-dev-igw"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-igw"
            },
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "dependencies": [
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e9e8301f51176fe",
            "connectivity_type": "public",
            "id": "nat-0d90dc0e2e4b9656a",
            "network_interface_id": "eni-014905754b1324aee",
            "private_ip": "172.16.10.106",
            "public_ip": "34.204.227.195",
            "subnet_id": "subnet-070f09cfd2be4b294",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.vpc_subnets.aws_eip.nat_eip",
            "module.vpc_subnets.aws_internet_gateway.igw",
            "module.vpc_subnets.aws_subnet.public",
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:route-table/rtb-0f0c115451203ddc4",
            "id": "rtb-0f0c115451203ddc4",
            "owner_id": "026366927179",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d90dc0e2e4b9656a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upgrad-project-private"
            },
            "tags_all": {
              "Name": "upgrad-project-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.aws_eip.nat_eip",
            "module.vpc_subnets.aws_internet_gateway.igw",
            "module.vpc_subnets.aws_nat_gateway.nat",
            "module.vpc_subnets.aws_subnet.public",
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:route-table/rtb-005644ff16ccad4f7",
            "id": "rtb-005644ff16ccad4f7",
            "owner_id": "026366927179",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0405673857bb97f79",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upgrad-project-public"
            },
            "tags_all": {
              "Name": "upgrad-project-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.aws_internet_gateway.igw",
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1d717fd3ca09eac",
            "route_table_id": "rtb-0f0c115451203ddc4",
            "subnet_id": "subnet-0d0fbd688e0564f4d"
          },
          "dependencies": [
            "module.vpc_subnets.aws_eip.nat_eip",
            "module.vpc_subnets.aws_internet_gateway.igw",
            "module.vpc_subnets.aws_nat_gateway.nat",
            "module.vpc_subnets.aws_route_table.private",
            "module.vpc_subnets.aws_subnet.private",
            "module.vpc_subnets.aws_subnet.public",
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fa3837fab3a998e",
            "route_table_id": "rtb-0f0c115451203ddc4",
            "subnet_id": "subnet-06c4841502da5e3cc"
          },
          "dependencies": [
            "module.vpc_subnets.aws_eip.nat_eip",
            "module.vpc_subnets.aws_internet_gateway.igw",
            "module.vpc_subnets.aws_nat_gateway.nat",
            "module.vpc_subnets.aws_route_table.private",
            "module.vpc_subnets.aws_subnet.private",
            "module.vpc_subnets.aws_subnet.public",
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a556990faaaf9781",
            "route_table_id": "rtb-005644ff16ccad4f7",
            "subnet_id": "subnet-070f09cfd2be4b294"
          },
          "dependencies": [
            "module.vpc_subnets.aws_internet_gateway.igw",
            "module.vpc_subnets.aws_route_table.public",
            "module.vpc_subnets.aws_subnet.public",
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3e2602a9990357a",
            "route_table_id": "rtb-005644ff16ccad4f7",
            "subnet_id": "subnet-0ed9e5b8dbe401609"
          },
          "dependencies": [
            "module.vpc_subnets.aws_internet_gateway.igw",
            "module.vpc_subnets.aws_route_table.public",
            "module.vpc_subnets.aws_subnet.public",
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:subnet/subnet-0d0fbd688e0564f4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0fbd688e0564f4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026366927179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upgrad-project-dev-private-us-east-1a"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-private-us-east-1a"
            },
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "dependencies": [
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:subnet/subnet-06c4841502da5e3cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c4841502da5e3cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026366927179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upgrad-project-dev-private-us-east-1b"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-private-us-east-1b"
            },
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "dependencies": [
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:subnet/subnet-070f09cfd2be4b294",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070f09cfd2be4b294",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026366927179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upgrad-project-dev-public-us-east-1a"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-public-us-east-1a"
            },
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "dependencies": [
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:subnet/subnet-0ed9e5b8dbe401609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed9e5b8dbe401609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026366927179",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upgrad-project-dev-public-us-east-1b"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-public-us-east-1b"
            },
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "dependencies": [
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:vpc/vpc-03c83a481cb37e289",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d0f4582ba6c515aa",
            "default_route_table_id": "rtb-0cc18f2c7b2aa1542",
            "default_security_group_id": "sg-09c3b9aa84d9a255e",
            "dhcp_options_id": "dopt-3c5db941",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c83a481cb37e289",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc18f2c7b2aa1542",
            "owner_id": "026366927179",
            "tags": {
              "Name": "upgrad-project-dev-vpc",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-vpc",
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.web_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026366927179:security-group/sg-0ff66c64c1d17c417",
            "description": "Security Group upgrad-project-dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff66c64c1d17c417",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "upgrad-project-dev-web",
            "name_prefix": "",
            "owner_id": "026366927179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upgrad-project-dev-web",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "upgrad-project-dev-web",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c83a481cb37e289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}